# nb4chat

./: .gitignore  docker-compose.yml  env.example  garage.toml  pyproject.toml
src/nb4chat/: __init__.py  app.py  s3.py  settings.py
